Unused code cleanup